objects/HELMS_Dealer_Broadcast_Message__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Settings is to display broadcast message for all dealer users.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Starts On</label>
        <type>DateTime</type>
    </fields>
    <label>HELMS Dealer Broadcast Message</label>
</CustomObject>